# rust-builder

./: .gitignore  CLAUDE.md  README.md  ROADMAP_CEP.md  current-tasks.md  features.md  roadmap.md  start.bat  start.js  start.sh
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs
backend/src/codegen/: bootstrap.rs  cache.rs  cargo_toml.rs  dataflow.rs  files.rs  format.rs  mod.rs  regions.rs  types.rs
backend/src/projects/: collab.rs  db.rs  handlers.rs  llm.rs  mod.rs  security.rs  store.rs  types.rs  validation.rs
backend/src/run/: mod.rs
backend/src/templates/: codegen.rs  debug.rs  error.rs  handlers.rs  mod.rs  ports.rs
backend/src/templates/builtins/: connectors.rs  custom.rs  egress.rs  grpc.rs  ingest.rs  language.rs  marketplace.rs  mod.rs  stream.rs  tokio.rs  wasm.rs
backend/tests/: collab.rs  health.rs  language_smoke.rs  projects.rs  templates.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  main.tsx  vite-env.d.ts
frontend/src/components/: MonacoEditor.tsx
frontend/src/views/: EntryPointNode.tsx  NodeConfigDrawer.tsx  NodePalette.tsx  PackageTree.tsx  ProjectCanvas.tsx  ProjectList.tsx  SchemaForm.tsx  SecurityDrawer.tsx  SqlBuilder.tsx  StudioNode.tsx
projects/: README.md
templates/: README.md
